--- a/scaminformative-web/package.json
+++ b/scaminformative-web/package.json
@@ -11,6 +11,7 @@
     "react-bootstrap": "^2.10.1",
     "react-dom": "^18.2.0",
     "react-scripts": "^5.0.1",
+    "react-slick": "^0.30.2",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
