First Version of fightbackscams.com hosted live

--- a/scaminformative-web/package.json
+++ b/scaminformative-web/package.json
@@ -15,6 +15,9 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build && npm run caution_msg",
+    "caution_msg": "echo \"---Attention!!! update custom domain name to fightbackscams.com in github pages, refer Readme for more info.\"",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
@@ -37,5 +40,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^6.1.1"
   }
 }
