--- a/scaminformative-web/package.json
+++ b/scaminformative-web/package.json
@@ -15,6 +15,7 @@
     "react": "^18.2.0",
     "react-bootstrap": "^2.10.1",
     "react-dom": "^18.2.0",
+    "react-icons": "^5.2.1",
     "react-scripts": "^5.0.1",
     "react-slick": "^0.30.2",
     "web-vitals": "^2.1.4"
